# stylus-erc20-oz

./: Cargo.toml  README.md
.github/workflows/: sbom-export.yaml
deployer/: Cargo.toml
deployer/src/: main.rs
scripts/: test.sh
token/: Cargo.toml
token/src/: constructor.sol  lib.rs  main.rs
