[package]
name = "stylus-erc20-oz-deployer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
stylus-erc20-oz-token = { path = "../token" }
alloy-primitives.workspace = true
alloy.workspace = true
koba.workspace = true
tokio.workspace = true
dotenv = "0.15.0"
